RbA Build/src/objects/Opportunity_Discount__c.object
<CustomObject>
    <description>Junction from the discount to the opportunity</description>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in dollars discounted from the opportunity.</description>
        <inlineHelpText>The amount in dollars discounted from the opportunity.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Description__c</fullName>
        <description>The description of the discount</description>
        <formula>Discount__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description of the discount</inlineHelpText>
        <label>Discount Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>The discount linked to this discount applied junction.</description>
        <inlineHelpText>The discount linked to this discount applied junction.</inlineHelpText>
        <label>Discount</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Discount__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Opportunity Discounts</relationshipLabel>
        <relationshipName>Opportunity_Discount_Applied</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The discount is applied to this opportunity</description>
        <inlineHelpText>The discount is applied to this opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Discount_Applied</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the opportunity discount.</description>
        <inlineHelpText>The status of the opportunity discount.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <description>The discount&apos;s store location</description>
        <formula>Discount__r.Store_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The discount&apos;s store location</inlineHelpText>
        <label>Store Location</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Discount</label>
    <nameField>
        <displayFormat>OD-{00000000}</displayFormat>
        <label>Opportunity Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>